[package]
name    = "k8s-ping"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow  = "1.0.66"
gumdrop = "0.8.1"

[dependencies.kube]
version  = "0.76.0"
features = ["client", "runtime", "openssl-tls"]
default-features = false

[dependencies.k8s-openapi]
version  = "0.16.0"
features = ["v1_25"]

[dependencies.tokio]
version  = "1.24.2"
features = ["full"]

[target.'cfg(target_env = "musl")'.dependencies.openssl-sys]
version  = "0.9.78"
features = ["vendored"]

[target.'cfg(not(target_env = "musl"))'.dependencies.openssl-sys]
version  = "0.9.78"
features = []
